corrected spelling in impleemtnation section header

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -560,9 +560,9 @@ $m = \set{2^{i}}_{i=1}^{10}$.
 
 \section{Implementation}
 
-Here I provide an overviewof  the Python classes
+Here I provide an overview of the Python classes
 that encapsulate the attributes (data members) and methods (functions) associated
-with the MLP. Since this approach is object oriented, it was helpful to
+with the MLP. Since this approach was object-oriented, it was helpful to
 define first the subunits of the MLP: operations (i.e., activation functions and
 cost functions) and layers.
 
