minor grammatical edit

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -811,7 +811,7 @@ $x$ belongs to the class $y \in \set{0, 1}$.
 The binary cross entropy (BCE) cost function for a problem such as this over
 $m$ examples in a batch is shown below. Note that $i$ denotes
 the $i^{th}$ sample of the batch \textit{not} the $i^{th}$ neuron of a layer
-since there is in one neuron in the last layer of a network approximating the
+since there is one neuron in the last layer of a network approximating
 the function for a binary classification problem.
 
 % Binary cross entropy
